<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.yeahfo.ftgo</groupId>
    <artifactId>ftgo-common-parent</artifactId>
    <version>0.0.1</version>
    <name>ftgo-common-parent</name>
    <description>ftgo-common-parent</description>
    <packaging>pom</packaging>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.compilerVersion>21</maven.compiler.compilerVersion>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <ftgo.version>0.0.1</ftgo.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.yeahfo.ftgo</groupId>
                <artifactId>ftgo-dependencies</artifactId>
                <version>${ftgo.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github Maven Repository</name>
            <url>file://${project.build.directory}/maven</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>alibaba</id>
            <name>Alibaba maven proxy repository</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>
        <repository>
            <id>github</id>
            <name>Github Maven Repository</name>
            <url>https://mirror.ghproxy.com/https://raw.githubusercontent.com/yeahfo/maven/main</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>alibaba</id>
            <name>Alibaba maven proxy repository</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
